tests/ui-rustc-1-95/g-typed-route-duplicate-label-project.stderr
error[E0080]: evaluation panicked: Route unprojectable for this role: invalid, duplicate, or non-deterministic first-visible route frontier
 --> src/g.rs
  |
  |     const { validate_choreography::<Steps>() };
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `hibana::g::project::<0, hibana::g::Route<hibana::g::Send<0, 0, hibana::g::Msg<5, ()>>, hibana::g::Send<0, 0, hibana::g::Msg<5, ()>>>>::{constant#0}` failed inside this call
  |
note: inside `g::validate_choreography::<Route<hibana::g::Send<0, 0, Msg<5, ()>>, hibana::g::Send<0, 0, Msg<5, ()>>>>`
 --> src/g.rs
  |
  |         panic_choreography_error(error);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `g::panic_choreography_error`
 --> $RUST/core/src/panic.rs
  |
  = note: the failure occurred here
  |
 ::: src/g.rs
  |
  |           ProgramSourceError::ProjectionRouteUnprojectable => panic!(concat!(
  |  _____________________________________________________________-
  | |             "Route unprojectable for this role: invalid, duplicate, ",
  | |             "or non-deterministic first-visible route frontier",
  | |         )),
  | |__________- in this macro invocation

note: erroneous constant encountered
 --> src/g.rs
  |
  |     const { validate_choreography::<Steps>() };
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn g::project::<0, Route<hibana::g::Send<0, 0, Msg<5, ()>>, hibana::g::Send<0, 0, Msg<5, ()>>>>`
 --> src/global/program.rs
  |
  |         crate::g::project(self)
  |         ^^^^^^^^^^^^^^^^^^^^^^^
